--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<h1>ATS Resume Scanner</h1>
+<h1 style="font-size: 50px;">ATS Resume Scanner</h1>
 
 <div class="upload-section">
     <input type="file" id="resumeFile" accept=".pdf,.docx"/>
@@ -18,13 +18,17 @@
         rows="6"></textarea>
 
     <!-- TWO BUTTONS -->
-    <button type="button" onclick="uploadResume('job_seeker')">
-        Scan as Job Seeker
-    </button>
+     <div class="two-buttons">
 
-    <button type="button" onclick="uploadResume('hiring_manager')">
+        <button type="button" onclick="uploadResume('job_seeker')">
+        Scan as Job Seeker
+        </button>
+
+        <button type="button" onclick="uploadResume('hiring_manager')">
         Scan as Hiring Manager
-    </button>
+        </button>
+
+     </div>
 </div>
 
 <div id="result" class="result-container"></div>
